Expose - Example Structure

--- a/Expose/expose.tex
+++ b/Expose/expose.tex
@@ -76,9 +76,12 @@
 \subsection{(Example) Structure}
 \dirtree{%
     .1 .
+    .2 Summary/Astract (\textit{actually needed?}).
     .2 Introduction.
-    .3 Background (current SmartHome technologies etc.).
+    .2 Background (current SmartHome technologies etc.).
     .2 Previous/Related Work.
+    .2 Design.
+    .3 What is the goal? How does it look (general architecture).
     .2 Implementation.
     .3 Available Data (small set of real world measurements).
     .3 Artificial Intelligence (\textit{$\leftarrow$ more specific}).
@@ -92,9 +95,10 @@
     .5 Inferred data.
     .3 Symbolic Regression.
     .4 ?.
-    .2 Evaluation.
     .3 Validation (with real world data).
+    .2 Evaluation.
     .3 Comparison between different implementations.
+    .3 Discussion of (general) outcomes and findings.
     .2 Conclusion and Future Work.
 }
 
