Expose - More Related Work research

--- a/Expose/expose.tex
+++ b/Expose/expose.tex
@@ -93,7 +93,7 @@ The framework/smart home system then decides which action(s) yield(s) the desire
 The framework should...
 \begin{itemize}
     \item[...] be able to predict outcomes and determine required actions to reach specific states.
-    \item[...] be (non-technical) user-friendly.
+%    \item[...] be (non-technical) user-friendly.
     \item[...] be (fairly) easy to 
         \begin{itemize}
             \item[(a)] adapt to match modified real-world smart home environment, e.g., adding/removing smart devices; and
@@ -139,7 +139,7 @@ Before the evaluation, the findings will be validated using real-world measureme
     .1 .
     .2 Abstract (\textit{$\leftarrow$ actually needed?}).
     .2 1 Introduction.
-    .2 2 Background (current SmartHome technologies etc.).
+    .2 2 Background.
     .2 3 Previous/Related Work.
     .2 4 Design.
     .3 4|1 What is the goal? How does it look (general architecture).
