Expose - Time Management

--- a/Expose/expose.tex
+++ b/Expose/expose.tex
@@ -142,7 +142,7 @@ Before the evaluation, the findings will be validated using real-world measureme
     .2 2 Background.
     .2 3 Previous/Related Work.
     .2 4 Design.
-    .3 4|1 What is the goal? How does it look (general architecture).
+    .3 4|1 What is the goal? How does it look (general architecture)?.
     .2 5 Implementation.
     .3 5|1 Available Data (small set of real world measurements).
     .3 5|2 Artificial Intelligence.
@@ -164,45 +164,115 @@ Before the evaluation, the findings will be validated using real-world measureme
     .2 7 Conclusion and Future Work.
 }
 
-\section{Related Work}
-\textcolor{red}{TODO}
+%\section{Related Work}
 
 \newpage
 \section{Time Management}
-\begin{table}[h!]
-    \begin{center}
-        \begin{tabular}{cccccc}
-            \toprule
-            \textbf{Week} & \textbf{Ch. 1 - 4} & \textbf{Implementation} & \textbf{Ch. 5 - 7} & \textbf{Buffer} \\
-            \midrule
-            1             & \checkmark         &                         &                    &                 \\
-            2             & \checkmark         &                         &                    &                 \\
-            3             & \checkmark         &                         &                    &                 \\
-            4             & \checkmark         &                         &                    &                 \\
-            5             &                    & \checkmark              &                    &                 \\
-            6             &                    & \checkmark              &                    &                 \\
-            7             &                    & \checkmark              &                    &                 \\
-            8             &                    & \checkmark              &                    &                 \\
-            9             &                    & \checkmark              &                    &                 \\
-            10            &                    & \checkmark              &                    &                 \\
-            11            &                    & \checkmark              &                    &                 \\
-            12            &                    & \checkmark              &                    &                 \\
-            13            &                    & \checkmark              &                    &                 \\
-            14            &                    & \checkmark              &                    &                 \\
-            15            &                    &                         & \checkmark         &                 \\
-            16            &                    &                         & \checkmark         &                 \\
-            17            &                    &                         & \checkmark         &                 \\
-            18            &                    &                         & \checkmark         &                 \\
-            19            &                    &                         & \checkmark         &                 \\
-            20            &                    &                         & \checkmark         &                 \\
-            21            &                    &                         & \checkmark         &                 \\
-            22            &                    &                         & \checkmark         &                 \\
-            23            &                    &                         &                    & \checkmark      \\
-            24            &                    &                         &                    & \checkmark      \\
-            25            &                    &                         &                    & \checkmark      \\
-            26            &                    &                         &                    & \checkmark      \\
-            \bottomrule
-        \end{tabular}
-    \end{center}
-\end{table}
+% \subsection{Overview}
+% \begin{table}[h!]
+%     \begin{center}
+%         \begin{tabular}{cccccc}
+%             \toprule
+%             \textbf{Week} & \textbf{Ch. 1 - 4} & \textbf{Implementation} & \textbf{Ch. 5 - 7} & \textbf{Buffer} \\
+%             \midrule
+%             1             & \checkmark         &                         &                    &                 \\
+%             2             & \checkmark         &                         &                    &                 \\
+%             3             & \checkmark         &                         &                    &                 \\
+%             4             & \checkmark         &                         &                    &                 \\
+%             5             &                    & \checkmark              &                    &                 \\
+%             6             &                    & \checkmark              &                    &                 \\
+%             7             &                    & \checkmark              &                    &                 \\
+%             8             &                    & \checkmark              &                    &                 \\
+%             9             &                    & \checkmark              &                    &                 \\
+%             10            &                    & \checkmark              &                    &                 \\
+%             11            &                    & \checkmark              &                    &                 \\
+%             12            &                    & \checkmark              &                    &                 \\
+%             13            &                    & \checkmark              &                    &                 \\
+%             14            &                    & \checkmark              &                    &                 \\
+%             15            &                    &                         & \checkmark         &                 \\
+%             16            &                    &                         & \checkmark         &                 \\
+%             17            &                    &                         & \checkmark         &                 \\
+%             18            &                    &                         & \checkmark         &                 \\
+%             19            &                    &                         & \checkmark         &                 \\
+%             20            &                    &                         & \checkmark         &                 \\
+%             21            &                    &                         & \checkmark         &                 \\
+%             22            &                    &                         & \checkmark         &                 \\
+%             23            &                    &                         &                    & \checkmark      \\
+%             24            &                    &                         &                    & \checkmark      \\
+%             25            &                    &                         &                    & \checkmark      \\
+%             26            &                    &                         &                    & \checkmark      \\
+%             \bottomrule
+%         \end{tabular}
+%     \end{center}
+% \end{table}
+
+%\subsection{Detailed Time List}
+\begin{minipage}[t]{.45\textwidth}
+    \textbf{Week 1-2}
+    \begin{itemize}
+        \item Ch. 1 Introduction
+        \item Ch. 4 Design
+        \item Collection of real-world data for training the framework later on
+    \end{itemize}
+    \textbf{Week 5-6}
+    \begin{itemize}
+        \item 
+        \item Point 2
+    \end{itemize}
+    \textbf{Week 9-10}
+    \begin{itemize}
+        \item Point 1
+        \item Point 2
+    \end{itemize}
+    \textbf{Week 13-14}
+    \begin{itemize}
+        \item Point 1
+        \item Point 2
+    \end{itemize}
+    \textbf{Week 17-18}
+    \begin{itemize}
+        \item Point 1
+        \item Point 2
+    \end{itemize}
+    \textbf{Week 21-22}
+    \begin{itemize}
+        \item Ch. 6 Evaluation
+        \item Ch. 7 Conclusion \& Future Work
+    \end{itemize}
+    \textbf{Week 25-26}
+    \begin{itemize}
+        \item Buffer
+    \end{itemize}
+\end{minipage}
+\hfill
+\begin{minipage}[t]{.45\textwidth}
+    \textbf{Week 3-4}
+    \begin{itemize}
+        \item Ch. 5.1 Implementation/Available Data
+        \item Implementation: Setting up framework
+    \end{itemize}
+    \textbf{Week 7-8}
+    \begin{itemize}
+        \item Point 1
+        \item Point 2
+    \end{itemize}
+    \textbf{Week 11-12}
+    \begin{itemize}
+        \item Point 1
+        \item Point 2
+    \end{itemize}
+    \textbf{Week 15-16}
+    \begin{itemize}
+        \item Point 1
+        \item Point 2
+    \end{itemize}
+    \textbf{Week 19-20}
+    \begin{itemize}
+        \item Point 1    
+    \end{itemize}
+    \textbf{Week 23-24}
+    \begin{itemize}
+        \item Buffer
+    \end{itemize}
+\end{minipage}
 \end{document}
