Expose - Time Management

--- a/Expose/expose.tex
+++ b/Expose/expose.tex
@@ -213,31 +213,34 @@ Before the evaluation, the findings will be validated using real-world measureme
         \item Ch. 1 Introduction
         \item Ch. 4 Design
         \item Collection of real-world data for training the framework later on
+        \item Researching fitting prediction techniques (what AI models, what type of SR, simulation environment, etc.)
     \end{itemize}
     \textbf{Week 5-6}
     \begin{itemize}
-        \item 
-        \item Point 2
+        \item Implementing AI approach
+        \item[]
+        \item[]
     \end{itemize}
     \textbf{Week 9-10}
     \begin{itemize}
-        \item Point 1
-        \item Point 2
+        \item Ch. 5.4 Symbolic Regression
+        \item Implementing Simulation
     \end{itemize}
     \textbf{Week 13-14}
     \begin{itemize}
-        \item Point 1
-        \item Point 2
+        \item Ch. 5.3 Simulation
+        \item Ch. 5.4 Validation
+        \item[]
+        \item[]
     \end{itemize}
     \textbf{Week 17-18}
     \begin{itemize}
-        \item Point 1
-        \item Point 2
+        \item Ch. 6 Evaluation
     \end{itemize}
     \textbf{Week 21-22}
     \begin{itemize}
-        \item Ch. 6 Evaluation
-        \item Ch. 7 Conclusion \& Future Work
+        \item Ch. 2 Background
+        \item Ch. 3 Previous/Related Work
     \end{itemize}
     \textbf{Week 25-26}
     \begin{itemize}
@@ -248,27 +251,29 @@ Before the evaluation, the findings will be validated using real-world measureme
 \begin{minipage}[t]{.45\textwidth}
     \textbf{Week 3-4}
     \begin{itemize}
+        \item Researching fitting prediction techniques
         \item Ch. 5.1 Implementation/Available Data
         \item Implementation: Setting up framework
+        \item[]
     \end{itemize}
     \textbf{Week 7-8}
     \begin{itemize}
-        \item Point 1
-        \item Point 2
+        \item Ch. 5.2 Artifial Intelligence
+        \item Implementing Symbolic Regression approach
     \end{itemize}
     \textbf{Week 11-12}
     \begin{itemize}
-        \item Point 1
-        \item Point 2
+        \item Implementing Simulation
+        \item[]
     \end{itemize}
     \textbf{Week 15-16}
     \begin{itemize}
-        \item Point 1
-        \item Point 2
+        \item Connecting approaches inside the framework
+        \item Rewriting code/Adaptions might be necessary
     \end{itemize}
     \textbf{Week 19-20}
     \begin{itemize}
-        \item Point 1    
+        \item Ch. 7 Conclusion \& Future Work
     \end{itemize}
     \textbf{Week 23-24}
     \begin{itemize}
