[THESIS] Created overall structure and frontpage

--- a/thesis/content/conclusion.tex
+++ b/thesis/content/conclusion.tex
@@ -1,7 +1,1 @@
-\chapter{Conclusion}
-
-The conclusion quickly summarizes the results of the paper
-in relation to the previously defined goals and hypotheses.
-It usually also includes some information on next steps and further research
-that might be required or possible on the presented subject.
-
+\chapter{Conclusion}\label{ch:conclusion}
