--- a/thesis/frontpage_de.tex
+++ b/thesis/frontpage_de.tex
@@ -22,7 +22,7 @@
 \begin{textblock}{14.5}(3.2,8.5)
   \large
 { \textbf{Masterarbeit}} \\[1cm]
-{\LARGE \Large\textbf{Fancy thesis template}} \\[1.3cm]
+{\LARGE \Large\textbf{FooSH: A Framework for outcome-oriented Smart Homes}} \\[1.3cm]
 Malte Josten\\
 Matrikelnummer: 3066184\\
 Angewandte Informatik (Master)
@@ -42,8 +42,8 @@ Universität Duisburg-Essen \\[2ex]
 \raggedright
 % Supervisors
 {\textbf{Erstgutachter:}} Prof. Dr-Ing. Torben Weis \\
-{\textbf{Zweitgutachter:}} Hier Zweitgutachter eintragen \\
-{\textbf{Zeitraum:}} 1. September 2042 - 1. Januar 2043 \\
+{\textbf{Zweitgutachter:}} Prof. Dr. Gregor Schiele \\
+{\textbf{Zeitraum:}} 5. Juni 2023 - 4. Dezember 2023 \\
 \end{textblock}
 
 \end{titlepage}
